# igniter_css

./: .check.exs  .credo.exs  .formatter.exs  .gitignore  .iex.exs  .tool-versions  CHANGELOG.md  README.md  mix.exs  mix.lock.license  rebuild_wheel.sh  test_css_validation.py  test_tinycss2_direct.py
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: elixir.yml
lib/: igniter_css.ex
lib/igniter_css/: application.ex  helpers.ex
lib/igniter_css/parsers/: css_processor.ex  formatter.ex  parser.ex
logos/: igniter-logo-small.png.license
plibs/css_tools/: pyproject.toml  setup.py
plibs/css_tools/src/css_tools/: __init__.py  extractor.py  minifier.py  modifier.py  parser.py
plibs/css_tools/src/css_tools.egg-info/: PKG-INFO
priv/python/: css_tools-0.1.2-py3-none-any.whl
test/: igniter_css_test.exs  test_helper.exs
test/parsers/css/: parser_test.exs
